kube-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudslip-facade-service
  namespace: cloudslip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudslip-facade-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  minReadySeconds: 25
  template:
    metadata:
      annotations:
        prometheus.io/path: "/prometheus"
        prometheus.io/port: '8081'
        prometheus.io/scrape: 'true'
      labels:
        app: cloudslip-facade-service
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: cloudslip-facade-service
        imagePullPolicy: Always
        image: cloudslip/cloudslip-facade-service:latest
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        ports:
        - containerPort: 8080
        - containerPort: 8081
      imagePullSecrets:
      - name: regcred
