kube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloudslip-facade-service
  namespace: cloudslip
  labels:
    app: cloudslip-facade-service
spec:
  ports:
  - name: http-rest
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: http-metrics
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: cloudslip-facade-service
