kube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudslip-facade-service
  namespace: cloudslip
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: facade.cloudslip.io
    http:
      paths:
      - backend:
          serviceName: cloudslip-facade-service
          servicePort: 80
        path: "/"
